package connector_server;

enum BodyCmdId {
    SYN =  1;
    ACK =  2;
    RSM =  3;
    FIN =  4;
    DATA = 5;
}

enum ConnectorMagic {
    MAGIC_SS_V1 = 0x3443;
}

message Tuple {
    required uint32 fd  = 1;    // 连接fd
    required uint64 nid = 2;    // 连接id
    required uint32 sid = 3;    // 有状态后端服务session id，无状态服务无意义，可以初始化为0
}

message SSHead {
    required int32 magic = 1[default=0x3443];
    required int64 sequence = 2;
    required int32 bodyid = 3;
    required Tuple session = 4;
}

message SSData {
    optional bytes data = 1;
}

message SSSyn {
  optional int32 result = 1;
}

message SSAck {
  optional int32 result = 1;
}

message SSRsm {
  optional int32 result = 1;
}

message SSFin {
  optional int32 result = 1;
}

// connector做透传，游戏客户端数据作为unknown fields
message SSBody {
    optional SSData data = 1;
    optional SSSyn syn = 2;
    optional SSAck ack = 3;
    optional SSRsm rsm = 4;
    optional SSFin fin = 5;
}

message SSMsg {
    required SSHead head = 1;
    required SSBody body = 2;
}
